--- a/CBI/jags/Makefile
+++ b/CBI/jags/Makefile
@@ -7,6 +7,5 @@ include ../utils.mk
 $(DOWNLOAD_TARGET):
 	mkdir -p $(BUILD_HOME); \
 	cd $(BUILD_HOME); \
-	curl -L -O https://downloads.sourceforge.net/project/mcmc-jags/JAGS/4.x/Source//$(TARBALL); \
+	curl -L -O https://downloads.sourceforge.net/project/mcmc-jags/JAGS/$(VERSION_X).x/Source/$(TARBALL); \
 	tar xvfz $(TARBALL)
-#https://downloads.sourceforge.net/project/mcmc-jags/JAGS/4.x/Source/JAGS-4.3.0.tar.gz
