proj: add 'make available-version

--- a/CBI/proj/Makefile
+++ b/CBI/proj/Makefile
@@ -12,6 +12,7 @@ else ifeq ($(VERSION_X),9)
     $(error Not yet supported: $NAME >= 9 requires CMake)
 endif
 
+GITHUB_REPO=https://github.com/OSGeo/PROJ
 
 ## ----------------------------------------------------------
 ## SOFTWARE
@@ -34,3 +35,6 @@ post_build: $(BUILD_PATH)/check.log
 post_install:
 	cp "$(BUILD_PATH)/config.log" "$(PREFIX)"
 	cp "$(BUILD_PATH)/check.log" "$(PREFIX)"
+
+available-version:
+	@curl --head --silent $(GITHUB_REPO)/releases/latest | grep -i -E "^location:" | sed -E 's/.*(v|\/)//'
