--- a/CBI/port4me/Makefile
+++ b/CBI/port4me/Makefile
@@ -15,7 +15,7 @@ $(DOWNLOAD_TARGET):
 	tar xf "$(TARBALL)"
 
 $(INSTALL_TARGET): $(DOWNLOAD_TARGET)
-	cd "$(BUILD_PATH)"; \
+	cd "$(BUILD_PATH)"/bash; \
 	make install PREFIX=$(PREFIX)
 	make post_install
 	ls -la $(PREFIX)
