sqlite: Compile with CFLAGS="-DSQLITE_ENABLE_COLUMN_METADATA=1 $${CFLAGS}" to avoid downstream errors like "undefined symbol: sqlite3_column_table_name" (https://stackoverflow.com/a/62947251/1072091)

--- a/CBI/sqlite/Makefile
+++ b/CBI/sqlite/Makefile
@@ -5,6 +5,7 @@ include ../utils.mk
 TARNAME=$(NAME)-autoconf-$(VERSION_ID)
 TARBALL=$(TARNAME).tar.gz
 
+
 ## ----------------------------------------------------------
 ## SOFTWARE
 ## ----------------------------------------------------------
@@ -16,6 +17,23 @@ $(DOWNLOAD_TARGET):
 	mv $(TARNAME) $(NAME)-$(VERSION)
 	ls -la "$(BUILD_PATH)"
 	grep -q -E "^[[:space:]]*VERSION='?$(VERSION)'?" $(DOWNLOAD_TARGET) || { 1>&2 echo "VERSION $(VERSION) != $$(cat "$(BUILD_PATH)/VERSION")"; exit 1; }
+
+
+## NOTES:
+## We set CFLAGS="-DSQLITE_ENABLE_COLUMN_METADATA=1 $${CFLAGS}" because [1,2]
+## [1] https://www.sqlite.org/compile.html#enable_column_metadata
+## [2] https://stackoverflow.com/a/62947251/1072091
+$(CONFIG_TARGET): $(DOWNLOAD_TARGET)
+	make --quiet pre_config
+	module --force purge; \
+	module load $(CONFIG_MODULES); \
+	module list; \
+	export CFLAGS="-DSQLITE_ENABLE_COLUMN_METADATA=1 $${CFLAGS}"; \
+	echo "LD_LIBRARY_PATH=$${LD_LIBRARY_PATH}"; \
+	echo "CFLAGS=$${CFLAGS}"; \
+	cd $(BUILD_PATH); \
+	./configure $(CONFIG_OPTS) --prefix=$(PREFIX)
+	make --quiet post_config
 
 $(BUILD_PATH)/check.log:
 	cd $(BUILD_PATH); \
