--- a/CBI/Makefile
+++ b/CBI/Makefile
@@ -1,20 +1,25 @@
 SHELL=bash
 
 install/%:
-	cd "$(@F)"; $(MAKE) all
+	@cd "$(@F)"; $(MAKE) all
 
 module/%:
-	cd "$(@F)"; $(MAKE) module
+	@cd "$(@F)"; $(MAKE) module
 
 check/%:
-	cd "$(@F)"; $(MAKE) check
+	@cd "$(@F)"; $(MAKE) check
 
 check-libs/ALL:
-	mapfile -t modules < <(find "$${MODULE_ROOT_CBI}" -maxdepth 1 -type d -exec basename {} \; | sort -u | grep -v -E "(miniconda3-py)"); \
-	for m in "$${modules[@]}"; do echo "$$m"; make "check-libs/$$m"; done
+	@mapfile -t modules < <(find "$${MODULE_ROOT_CBI}" -maxdepth 1 -type d -exec basename {} \; | sort -u | grep -v -E "(miniconda3-py)"); \
+	echo "Scanning $${#modules[@]} modules:"; \
+	for kk in $$(seq "$${#modules[@]}"); do \
+	    mm="$${modules[$$((kk - 1))]}"; \
+	    echo "$${kk}/$${#modules[@]}: $${mm}"; \
+            [[ -d "$${mm}" ]] && make --quiet "check-libs/$${mm}"; \
+	done
 
 check-libs/%:
-	cd "$(@F)"; $(MAKE) check-libs
+	@cd "$(@F)"; $(MAKE) check-libs
 
 %/PACKAGES: PACKAGES
 	@cmd=$(@D); \
