--- a/CBI/qtop/Makefile
+++ b/CBI/qtop/Makefile
@@ -10,10 +10,29 @@ $(DOWNLOAD_TARGET):
 	curl -L -O https://github.com/qtop/${NAME}/archive/v${VERSION}.tar.gz; \
 	tar xzf v${VERSION}.tar.gz
 
-$(INSTALL_TARGET): $(DOWNLOAD_TARGET)
-	mkdir -p $(SOFTWARE_HOME)
-	mkdir -p $(PREFIX)
-	cp -R $(BUILD_PATH) $(PREFIX)/..
+## Patch code: 'python' -> 'python2'
+$(BUILD_TARGET): $(DOWNLOAD_TARGET)
+	td=$$(mktemp -d); \
+	rm -rf "$${td}"; \
+	cp -p -R "$(BUILD_PATH)" "$${td}"; \
+	cd "$${td}"; \
+	mapfile -t files < <(find . -type f -executable); \
+	for ff in "$${files[@]}"; do \
+	    sed -i -E "s/^python /python2 /g" "$${ff}"; \
+	    sed -i -E "s/^(#\!\/usr\/bin\/env python)( |$$)/\12\2/g" "$${ff}"; \
+	done; \
+	mv "$${td}" "$(BUILD_PATH)/.patched"; \
+	rm -rf "$${td}"
+	diff -u -w "$(BUILD_PATH)" "$(BUILD_PATH)/.patched" || true
+	touch "$(BUILD_PATH)/.patched/done"
+
+$(INSTALL_TARGET): $(BUILD_TARGET)
+	mkdir -p "$(SOFTWARE_HOME)"
+	chmod -R u+w "$(PREFIX)"
+	rm -rf "$(PREFIX)"
+	mkdir -p "$(PREFIX)"
+	cp -R "$(BUILD_PATH)/.patched" "$(BUILD_PATH)/$(BUILD_NAME)"
+	cp -R "$(BUILD_PATH)/$(BUILD_NAME)" "$(PREFIX)/.."
 	make post_install
-	ls -la $(PREFIX)
+	ls -la "$(PREFIX)"
 	@echo "SOFTWARE INSTALLED TO: $(PREFIX)"
