tophat: Patch python -> python2 by adding a build step => works also on Rocky 8 [#93]

--- a/CBI/tophat/Makefile
+++ b/CBI/tophat/Makefile
@@ -13,9 +13,29 @@ $(DOWNLOAD_TARGET):
 	tar zxf $(TARBALL); \
 	mv $(NAME)-$(VERSION).Linux_x86_64 $(NAME)-$(VERSION)
 
+## Patch code: 'python' -> 'python2'
+$(BUILD_TARGET): $(DOWNLOAD_TARGET)
+	td=$$(mktemp -d); \
+	rm -rf "$${td}"; \
+	cp -p -R "$(BUILD_PATH)" "$${td}"; \
+	cd "$${td}"; \
+	mapfile -t files < <(find . -type f -executable); \
+	for ff in "$${files[@]}"; do \
+	    sed -i -E "s/^python /python2 /g" "$${ff}"; \
+	    sed -i -E "s/^(#\!\/usr\/bin\/env python)( |$$)/\12\2/g" "$${ff}"; \
+	done; \
+	mv "$${td}" "$(BUILD_PATH)/.patched"; \
+	rm -rf "$${td}"
+	diff -u -w "$(BUILD_PATH)" "$(BUILD_PATH)/.patched" || true
+	touch "$(BUILD_PATH)/.patched/done"
+
 $(INSTALL_TARGET): $(DOWNLOAD_TARGET)
-	mkdir -p $(PREFIX)
-	cp -R $(BUILD_PATH) $(PREFIX)/..
+	mkdir -p "$(SOFTWARE_HOME)"
+	chmod -R u+w "$(PREFIX)"
+	rm -rf "$(PREFIX)"
+	mkdir -p "$(PREFIX)"
+	cp -R "$(BUILD_PATH)/.patched" "$(BUILD_PATH)/$(BUILD_NAME)"
+	cp -R "$(BUILD_PATH)/$(BUILD_NAME)" "$(PREFIX)/.."
 	make post_install
 	ls -la $(PREFIX)
 	@echo "SOFTWARE INSTALLED TO: $(PREFIX)"
