gistic2: Can't get it to work on Rocky 8 (requires libncurses.so.5, but only libncurses.so.6 is available)

--- a/CBI/gistic2/Makefile
+++ b/CBI/gistic2/Makefile
@@ -22,6 +22,7 @@ $(INSTALL_TARGET): $(DOWNLOAD_TARGET)
 	tar -xzf $(BUILD_PATH)/$(TARBALL)
 	cd $(PREFIX)/MCR_Installer; \
 	unzip MCRInstaller.zip; \
+	module load matlab/2018b; \
 	./install -mode silent -agreeToLicense yes -destinationFolder "$(PREFIX)/MATLAB_Compiler_Runtime"
 	make post_install
 	ls -la $(PREFIX)
