r: fix assert_gcc_version

--- a/CBI/r/Makefile
+++ b/CBI/r/Makefile
@@ -89,7 +89,7 @@ debug2: debug
 
 
 assert_gcc_version:
-	@curr_version=$$(module try-load "$(CONFIG_MODULES)" && gcc --version | head -1 | sed 's/.* //' | sed 's/[.].*//'); \
+	@curr_version=$$(module try-load $(CONFIG_MODULES) && gcc --version | head -1 | sed 's/.* //' | sed 's/[.].*//'); \
 	echo "Requested GCC version: $(GCC_VERSION)"; \
 	echo "Provided GCC version: $${curr_version}"; \
 	[[ "$(GCC_VERSION)" == "" ]] || [[ $${curr_version} == "$(GCC_VERSION)" ]] || { 2>&1 echo "ERROR: Provided GCC version (v$${curr_version}) not the same as the requested one (v$(GCC_VERSION))"; exit 1; }
