--- a/CBI/Makefile
+++ b/CBI/Makefile
@@ -2,7 +2,7 @@ SHELL=bash
 
 modulerc: $(MODULE_HOME)/.modulerc.lua
 
-$(MODULE_HOME)/.modulerc.lua: .modulerc.lua.sh
+$(MODULE_HOME)/.modulerc.lua: .modulerc.lua.sh FORCE
 	echo "Updating: $@"
 	./"$<" > "$@".tmp
 	chmod ugo-w "$@" "$@".tmp
