gdal/2.4.3: install also man files; fix broken MANPATH

--- a/CBI/gdal/Makefile
+++ b/CBI/gdal/Makefile
@@ -69,6 +69,15 @@ $(INSTALL_TARGET): $(BUILD_TARGET)
 	module purge; \
 	module load $(BUILD_MODULES); \
         cmake --build . --target install
+else
+$(INSTALL_TARGET): $(BUILD_TARGET)
+	mkdir -p $(PREFIX)
+	cd $(BUILD_PATH); \
+	make --quiet install-man; \
+	make --quiet install
+	make --quiet post_install
+	ls -la $(PREFIX)
+	@echo "SOFTWARE INSTALLED TO: $(PREFIX)"
 endif
 
 BUILD_MODULES=$(CONFIG_MODULES)
