--- a/CBI/Makefile
+++ b/CBI/Makefile
@@ -35,10 +35,22 @@ check-rpath/ALL:
             [[ -d "$${mm}" ]] && make --quiet "$(@D)/$${mm}"; \
 	done
 
+check-absolute-paths/ALL:
+	@mapfile -t modules < <(find "$${MODULE_ROOT_CBI}" -maxdepth 1 -type d -exec basename {} \; | sort -u | grep -v -E "(miniconda3-py)"); \
+	echo "Scanning $${#modules[@]} modules:"; \
+	for kk in $$(seq "$${#modules[@]}"); do \
+	    mm="$${modules[$$((kk - 1))]}"; \
+	    echo "$${kk}/$${#modules[@]}: $${mm}"; \
+            [[ -d "$${mm}" ]] && make --quiet "$(@D)/$${mm}"; \
+	done
+
 check-libs/%:
 	@cd "$(@F)"; $(MAKE) $(@D)
 
 check-rpath/%:
+	@cd "$(@F)"; $(MAKE) $(@D)
+
+check-absolute-paths/%:
 	@cd "$(@F)"; $(MAKE) $(@D)
 
 %/PACKAGES: PACKAGES
