gistic2: make sure 'other' can access installed software

--- a/CBI/gistic2/Makefile
+++ b/CBI/gistic2/Makefile
@@ -36,6 +36,8 @@ post_install:
 	chmod ugo+x gistic2.tmp; \
 	cp gistic2 gistic2.org; \
 	mv gistic2.tmp gistic2
+#	## unzip MCRInstaller.zip removes access to 'other'
+	chmod o+rx "$(PREFIX)"
 
 post_install_module:
 	make write_protect_module
