--- a/CBI/git-extras/Makefile
+++ b/CBI/git-extras/Makefile
@@ -15,7 +15,7 @@ $(DOWNLOAD_TARGET):
 
 $(BUILD_TARGET): $(DOWNLOAD_TARGET)
 	cd $(BUILD_PATH); \
-	make install PREFIX=$(PREFIX)
+	make install PREFIX="$(PREFIX)"
 
 available-version:
 	@curl --head --silent $(GITHUB_REPO)/releases/latest | grep -i -E "^location:" | sed -E 's/.*(v|\/)//'
