picard: Add 'make available-version'

--- a/CBI/picard/Makefile
+++ b/CBI/picard/Makefile
@@ -2,7 +2,8 @@ include config.mk
 include ../utils.mk
 
 TARBALL=$(VERSION)/$(NAME).jar
-URL=https://github.com/broadinstitute/picard/releases/download/$(TARBALL)
+GITHUB_REPO=https://github.com/broadinstitute/picard
+URL=$(GITHUB_REPO)/releases/download/$(TARBALL)
 
 ifeq ($(VERSION),1.64)
 TARBALL=picard-tools-$(VERSION).zip
@@ -35,3 +36,6 @@ endif
 	make post_install
 	ls -la $(PREFIX)
 	@echo "SOFTWARE INSTALLED TO: $(PREFIX)"
+
+available-version:
+	@curl --head --silent $(GITHUB_REPO)/releases/latest | grep -i -E "^location:" | sed -E 's/.*(v|\/)//'                         
