--- a/CBI/rstudio-server/Makefile
+++ b/CBI/rstudio-server/Makefile
@@ -16,9 +16,6 @@ VERSION:=$(VERSION_MINUS)
 include ../utils.mk
 
 TARBALL=v$(VERSION_PLUS).tar.gz
-ifeq ($(VERSION),2023.12.1-402)
-TARBALL=$(VERSION_PLUS).tar.gz
-endif
 
 debug3:
 	@echo "VERSION=$(VERSION)"
@@ -114,7 +111,7 @@ $(INSTALL_TARGET): $(BUILD_TARGET)
 
 available-version:
 #	@curl --silent https://docs.posit.co/ide/news/ | pandoc --from=html --to=plain | grep -E "RStudio [[:digit:]]+[.][[:digit:]]+[.][[:digit:]]+\b" | sed -E 's/^(-[[:space:]]+|)RStudio //' | uniq | head -1
-	@curl --silent https://github.com/rstudio/rstudio/tags | pandoc --from=html --to=plain | grep -E "^v?[[:digit:]]+[.][[:digit:]]+[.][[:digit:]]+" | sed -E 's/^v//' | head -1 | sed 's/+/-/'
+	@curl --silent https://github.com/rstudio/rstudio/tags | pandoc --from=html --to=plain | grep -E "^v[[:digit:]]+[.][[:digit:]]+[.][[:digit:]]+" | sed -E 's/^v//' | head -1 | sed 's/+/-/'
 
 FORCE:
 
