jq: Add 'make available-version'

--- a/CBI/jq/Makefile
+++ b/CBI/jq/Makefile
@@ -1,16 +1,17 @@
 include config.mk
 include ../utils.mk
 
+GITHUB_REPO=https://github.com/jqlang/jq
+
 ## ----------------------------------------------------------
 ## SOFTWARE
 ## ----------------------------------------------------------
 $(DOWNLOAD_TARGET):
 	mkdir -p $(BUILD_HOME); \
 	cd $(BUILD_HOME); \
-	curl -L -O https://github.com/jqlang/jq/releases/download/$(NAME)-$(VERSION)/$(TARBALL); \
+	curl -L -O $(GITHUB_REPO)/releases/download/$(NAME)-$(VERSION)/$(TARBALL); \
 	tar xf "$(TARBALL)"
 
-#$(INSTALL_TARGET): $(DOWNLOAD_TARGET)
-#	chmod ugo+x $(BUILD_PATH)/$(NAME)
-#	cp -R $(BUILD_PATH) $(PREFIX)
-#	@echo "SOFTWARE INSTALLED TO: $(PREFIX)"
+
+available-version:
+	@curl --head --silent $(GITHUB_REPO)/releases/latest | grep -i -E "^location:" | sed -E 's/.*(v|\/)//' | sed -E 's/^jq-//'
