fzf/0.54.1 + https://github.com/junegunn/fzf/issues/3927

--- a/CBI/fzf/Makefile
+++ b/CBI/fzf/Makefile
@@ -2,7 +2,7 @@ include config.mk
 include ../utils.mk
 
 
-TARBALL=$(VERSION).tar.gz
+TARBALL=v$(VERSION).tar.gz
 GITHUB_REPO=https://github.com/junegunn/$(NAME)
 
 ## ----------------------------------------------------------
